Upgrade to `dragon-code/laravel-deploy-operations`

--- a/lang/en.json
+++ b/lang/en.json
@@ -14,6 +14,7 @@
     "Already Reported": "Already Reported",
     "Archive": "Archive",
     "Assign": "Assign",
+    "Associate": "Associate",
     "Attach": "Attach",
     "Bad Gateway": "Bad Gateway",
     "Bad Request": "Bad Request",
@@ -58,6 +59,7 @@
     "Expectation Failed": "Expectation Failed",
     "Explanation": "Explanation",
     "Export": "Export",
+    "Export :name": "Export :name",
     "Failed Dependency": "Failed Dependency",
     "File": "File",
     "Files": "Files",
@@ -87,12 +89,15 @@
     "Introduction": "Introduction",
     "Invalid JSON was returned from the route.": "Invalid JSON was returned from the route.",
     "Invalid SSL Certificate": "Invalid SSL Certificate",
+    "length": "length",
     "Length Required": "Length Required",
     "Like": "Like",
     "Load": "Load",
     "Localize": "Localize",
     "Location": "Location",
     "Locked": "Locked",
+    "Log In": "Log In",
+    "Log Out": "Log Out",
     "Login": "Login",
     "Logout": "Logout",
     "Loop Detected": "Loop Detected",
@@ -139,6 +144,7 @@
     "Proxy Authentication Required": "Proxy Authentication Required",
     "Railgun Error": "Railgun Error",
     "Range Not Satisfiable": "Range Not Satisfiable",
+    "Record": "Record",
     "Regards": "Regards",
     "Register": "Register",
     "Request Header Fields Too Large": "Request Header Fields Too Large",
@@ -168,8 +174,11 @@
     "Show :name": "Show :name",
     "Show All": "Show All",
     "Showing": "Showing",
+    "Sign In": "Sign In",
     "Solve": "Solve",
     "SSL Handshake Failed": "SSL Handshake Failed",
+    "Start": "Start",
+    "Stop": "Stop",
     "Submit": "Submit",
     "Subscribe": "Subscribe",
     "Switch": "Switch",
